[package]
name = "neon-cli"
version = "0.6.0"
edition = "2021"
authors = ["Tim Tully <tim@menlovc.com>"]
license = "MIT OR Apache-2.0"
description = "A command-line tool for using the Neon serverless Postgres database."
readme = "README.md"
homepage = "https://github.com/tullytim/neon-cli"
repository = "https://github.com/tullytim/neon-cli"
keywords = ["neon", "database", "postgres", "postgresql", "cli"]
categories = ["command-line-utilities"]

[dependencies]
app = "0.6.5"
arg = "0.4.1"
clap = { version = "4.2.7", features = ["derive"] }
clap_builder = "4.2.7"
clap_derive = "4.2.0"
postgres = { version = "0.19.5", features = ["with-chrono-0_4"] }
envy = "0.4.2"
serde = { version = "1.0.163", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = { version = "1", features = ["full"] }
postgres-openssl = "0.5.0"
openssl = "0.10.38"
postgres-native-tls = "0.5.0"
anyhow = "1.0.71"
native-tls = "0.2.11"
http = "0.2.4"
chrono = "0.4.24"
comfy-table = "6.1.4"
reqwest = { version = "0.11.4", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
serde_json = "1.0.71"
stderr = "0.8.0"
csv = "1.1"